Cat - Refatoracao do codigo